--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "lorisleiva/laravel-actions": "^2.5"
     },
     "require-dev": {
+        "roave/security-advisories": "dev-latest",
         "barryvdh/laravel-ide-helper": "^2.13",
         "fakerphp/faker": "^1.9.1",
         "knuckleswtf/scribe": "^4.19",
