--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Copy deploy.sh file
+          uses: garygrossgarten/github-action-scp@release
+          with:
+            local: .scripts/deploy.sh
+            remote: /var/www/html/.scripts/deploy.sh
+            host: ${{ secrets.HOST }}
+            port: ${{ secrets.PORT }}
+            privateKey: ${{ secrets.SSHKEY }}
       - name: Deploy to server
         uses: appleboy/ssh-action@master
         with:
