--- a/composer.json
+++ b/composer.json
@@ -7,17 +7,19 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
+        "inertiajs/inertia-laravel": "^0.6.8",
         "laravel/framework": "^10.0",
         "laravel/passport": "^11.8",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "lorisleiva/laravel-actions": "^2.5"
+        "lorisleiva/laravel-actions": "^2.5",
+        "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
-        "roave/security-advisories": "dev-latest",
         "barryvdh/laravel-ide-helper": "^2.13",
         "fakerphp/faker": "^1.9.1",
         "knuckleswtf/scribe": "^4.19",
+        "laravel/breeze": "^1.21",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
@@ -25,6 +27,7 @@
         "pestphp/pest": "^2.6",
         "pestphp/pest-plugin-laravel": "^2.0",
         "phpunit/phpunit": "^10.1",
+        "roave/security-advisories": "dev-latest",
         "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
