--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "format": "prettier ./resources/js/ --write"
     },
     "devDependencies": {
         "@inertiajs/vue3": "^1.0.0",
@@ -13,8 +14,13 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
         "postcss": "^8.4.18",
+        "prettier": "^2.8.8",
+        "prettier-plugin-tailwindcss": "^0.3.0",
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0",
         "vue": "^3.2.41"
+    },
+    "dependencies": {
+        "cssnano": "^6.0.1"
     }
 }
