--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "vue": "^3.2.41"
     },
     "dependencies": {
-        "cssnano": "^6.0.1"
+        "cssnano": "^6.0.1",
+        "vue-dadata": "^3.0.0-beta.13"
     }
 }
