--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "cssnano": "^6.0.1",
-        "vue-dadata": "^3.0.0-beta.13"
+        "vue-dadata": "^3.0.0-beta.13",
+        "ziggy": "^2.4.0"
     }
 }
