--- a/package.json
+++ b/package.json
@@ -1,28 +1,36 @@
 {
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "format": "prettier ./resources/js/ --write"
-    },
-    "devDependencies": {
-        "@inertiajs/vue3": "^1.0.0",
-        "@tailwindcss/forms": "^0.5.3",
-        "@vitejs/plugin-vue": "^4.0.0",
-        "autoprefixer": "^10.4.12",
-        "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.7.2",
-        "postcss": "^8.4.18",
-        "prettier": "^2.8.8",
-        "prettier-plugin-tailwindcss": "^0.3.0",
-        "tailwindcss": "^3.2.1",
-        "vite": "^4.0.0",
-        "vue": "^3.2.41"
-    },
-    "dependencies": {
-        "cssnano": "^6.0.1",
-        "vue-dadata": "^3.0.0-beta.13",
-        "ziggy": "^2.4.0"
-    }
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "format": "prettier ./resources/js/ --write"
+  },
+  "devDependencies": {
+    "@inertiajs/vue3": "^1.0.0",
+    "@tailwindcss/forms": "^0.5.3",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/tsconfig": "^0.4.0",
+    "autoprefixer": "^10.4.12",
+    "axios": "^1.1.2",
+    "eslint": "^8.45.0",
+    "eslint-config-prettier": "^8.9.0",
+    "eslint-plugin-vue": "^9.15.1",
+    "laravel-vite-plugin": "^0.7.2",
+    "postcss": "^8.4.18",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "tailwindcss": "^3.2.1",
+    "typescript": "^5.1.6",
+    "vite": "^4.0.0",
+    "vue": "^3.2.41",
+    "vue-tsc": "^1.8.8"
+  },
+  "dependencies": {
+    "cssnano": "^6.0.1",
+    "vue-dadata": "^3.0.0-beta.13",
+    "ziggy": "^2.4.0"
+  }
 }
