--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,12 @@
   ],
   "rules": {
     "vue/multi-word-component-names": "off",
+    "max-len": [
+      "error",
+      {
+        "code": 120
+      }
+    ],
     "vue/attributes-order": [
       "error",
       {
