--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,7 +3,7 @@
   "tabWidth": 2,
   "semi": true,
   "singleQuote": true,
-  "singleAttributePerLine": false,
+  "singleAttributePerLine": true,
   "bracketSpacing": true,
   "bracketSameLine": false,
   "htmlWhitespaceSensitivity": "ignore"
