--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,9 +1,11 @@
 {
   "trailingComma": "es5",
-  "tabWidth": 2,
-  "printWidth": 120,
-  "singleQuote": true,
-  "singleAttributePerLine": true,
-  "bracketSpacing": true,
-  "bracketSameLine": false
+//  "tabWidth": 2,
+//  "printWidth": 120,
+  "semi": true
+//  "singleQuote": true,
+//  "singleAttributePerLine": true,
+//  "bracketSpacing": true,
+//  "bracketSameLine": false,
+//  "htmlWhitespaceSensitivity": "ignore"
 }
