--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,9 @@
     "@typescript-eslint"
   ],
   "rules": {
+    "@typescript-eslint/no-explicit-any": "off",
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": "error",
     "vue/multi-word-component-names": "off",
     "max-len": [
       "error",
@@ -249,13 +252,6 @@
         "allow": [
           "~"
         ]
-      }
-    ],
-    // запрещает побитовые операторы.
-    "no-unused-vars": [
-      "error",
-      {
-        "argsIgnorePattern": "^_"
       }
     ],
     // запрещает неиспользуемые переменные.
