--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,11 @@
     },
     "allowJs": true,
     "strict": false,
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "lib": [
+      "esnext.full",
+      "dom"
+    ]
   },
   "exclude": [
     "node_modules",
