--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,11 +1,17 @@
 {
   "trailingComma": "es5",
-//  "tabWidth": 2,
-//  "printWidth": 120,
-  "semi": true
-//  "singleQuote": true,
-//  "singleAttributePerLine": true,
-//  "bracketSpacing": true,
-//  "bracketSameLine": false,
-//  "htmlWhitespaceSensitivity": "ignore"
+  "tabWidth": 2,
+  "singleAttributePerLine": true,
+  "printWidth": 120,
+  "jsxBracketSameLine": true,
+  "semi": true,
+  "singleQuote": true,
+  "bracketSpacing": true,
+  "bracketSameLine": false,
+  "htmlWhitespaceSensitivity": "ignore",
+  "jsxSingleQuote": false,
+  "trimTrailingWhitespace": true,
+  "plugins": [
+    "prettier-plugin-tailwindcss"
+  ]
 }
