--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.1.2",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.9.0",
+    "eslint-plugin-tailwindcss": "^3.13.0",
     "eslint-plugin-vue": "^9.15.1",
     "laravel-vite-plugin": "^0.7.2",
     "postcss": "^8.4.18",
@@ -26,6 +27,7 @@
     "typescript": "^5.1.6",
     "vite": "^4.0.0",
     "vue": "^3.2.41",
+    "vue-eslint-parser": "^9.3.1",
     "vue-tsc": "^1.8.8"
   },
   "dependencies": {
