--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,7 @@
       "skipClassAttribute": false,
       // Тут кастомные классы
       "whitelist": [
+        "font-cloud-burst",
         "btn-primary",
         "btn-secondary",
         "btn-secondary-outlined"
