--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "lorisleiva/laravel-actions": "^2.5",
-        "tightenco/ziggy": "^1.0"
+        "lorisleiva/laravel-actions": "^2.5"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.13",
