--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,21 +2,21 @@ name: Deploy to staging
 on:
   push:
     branches:
-      - 'develop'
+      - 'deploy'
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Copy deploy.sh file
-        uses: garygrossgarten/github-action-scp@release
+        uses: appleboy/scp-action@master
         with:
-          local: .scripts/deploy.sh
-          remote: /var/www/html/.scripts/deploy.sh
           host: ${{ secrets.STAGING_HOST }}
-          username: ${{ secrets.STAGING_USERNAME }}
           port: ${{ secrets.STAGING_PORT }}
-          privateKey: ${{ secrets.STAGING_SSHKEY }}
+          username: ${{ secrets.STAGING_USERNAME }}
+          source: ".scripts/deploy.sh"
+          target: /var/www/rent-ratings/.scripts/deploy.sh
+          key: ${{ secrets.STAGING_SSHKEY }}
       - name: Deploy to server
         uses: appleboy/ssh-action@master
         with:
