--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
           host: ${{ secrets.STAGING_HOST }}
           port: ${{ secrets.STAGING_PORT }}
           username: ${{ secrets.STAGING_USERNAME }}
-          source: .scripts/deploy.sh
+          source: ".scripts/deploy.sh"
           target: /var/www/rent-ratings/.scripts
           key: ${{ secrets.STAGING_SSHKEY }}
       - name: Deploy to server
