--- a/.github/workflows/deploy-to-staging.yml
+++ b/.github/workflows/deploy-to-staging.yml
@@ -2,7 +2,7 @@ name: Deploy to staging
 on:
   push:
     branches:
-      - 'deploy'
+      - 'staging'
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -18,7 +18,7 @@ jobs:
           target: /var/www/rent-ratings/
           key: ${{ secrets.STAGING_SSHKEY }}
           overwrite: true
-      - name: Deploy to server
+      - name: Run deploy.sh file
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.STAGING_HOST }}
