--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -8,10 +8,10 @@
   "singleQuote": true,
   "bracketSpacing": true,
   "bracketSameLine": false,
-  "htmlWhitespaceSensitivity": "ignore",
-  "jsxSingleQuote": false,
+  "jsxSingleQuote": true,
   "trimTrailingWhitespace": true,
   "plugins": [
     "prettier-plugin-tailwindcss"
   ]
 }
+
